// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing app Should call api 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#fff",
      "flex": 1,
      "marginHorizontal": 16,
      "marginTop": 50,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
    testID="View_Container_Search"
  >
    <TextInput
      onChangeText={[Function]}
      placeholder="Please, inform your pockemon"
      style={
        {
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 40,
          "padding": 8,
          "width": "60%",
        }
      }
      testID="TextInput_Search"
      value="ditto"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "blue",
          "borderRadius": 24,
          "margin": 16,
          "padding": 12,
          "width": "30%",
        }
      }
      testID="Pressable_Search"
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Pesquisar
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Testing app Should render corretly 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#fff",
      "flex": 1,
      "marginHorizontal": 16,
      "marginTop": 50,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "width": "100%",
      }
    }
    testID="View_Container_Search"
  >
    <TextInput
      onChangeText={[Function]}
      placeholder="Please, inform your pockemon"
      style={
        {
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 40,
          "padding": 8,
          "width": "60%",
        }
      }
      testID="TextInput_Search"
      value=""
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "blue",
          "borderRadius": 24,
          "margin": 16,
          "padding": 12,
          "width": "30%",
        }
      }
      testID="Pressable_Search"
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Pesquisar
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
